# chess

./: .gitignore  .gitmodules  BenchTimes.txt  CMakeLists.txt  ConsoleApplication.cpp  Makefile  README.md  main.cpp
BoardEngine/: BoardEngine.cpp  BoardEngine.hpp  CMakeLists.txt
BoardEngine/FieldLookup/: FieldLookup.hpp  GenerateLookup.py  GenerateLookup2.py  TableLookup.hpp
BoardEngine/MoveGenerator/: MoveGenerator.cpp  MoveGenerator.hpp  MoveGeneratorBackend.hpp  MoveGeneratorContext.hpp  MoveGeneratorExperimentalBackend.hpp  MoveGeneratorLookupBackend.hpp  Strategy.hpp
BoardEngine/detail/: BitBoardsUtils.h  BitBoarsUtils.h  Board.cpp  BoardIO.cpp  CheckChecker.cpp  CheckChecker.hpp  MoveApplier.cpp  MoveApplier.hpp  MoveGenerator.cpp  MoveGenerator.hpp  MoveValidator.cpp  MoveValidator.hpp  NotationConversions.cpp  PinnedMovesChecker.hpp  ResultEvaluator.cpp  ResultEvaluator.hpp  bitboardslookups.cpp  bitboardslookups.hpp
BoardEngine/hashing/: Zobrish.cpp  zobrist.hpp
BoardEngine/notations/: LongAlgebraicNotation.cpp  LongAlgebraicNotation.hpp  coordinationnotation.cpp  fen.cpp  fen.h  fen.hpp  uci.cpp  uci.hpp
BoardEngine/publicIf/: Board.hpp  BoardIO.hpp  Notation.hpp  NotationConversions.hpp  Result.hpp
BoardLibrary/: BoardEngine.cpp  BoardEngine.hpp  CMakeLists.txt
BoardLibrary/MoveApplier/: MoveApplier.cpp  MoveApplier.hpp
BoardLibrary/MoveGenerator/: MoveGenerator.cpp  MoveGeneratorBackend.hpp  MoveGeneratorContext.hpp  Strategy.hpp
BoardLibrary/MoveGeneratorV2/: MoveGeneratorV2.cpp  MoveGeneratorV2.hpp
BoardLibrary/MoveValidator/: MoveValidator.cpp  MoveValidator.hpp
BoardLibrary/PositionAnalyzers/: CheckChecker.cpp  CheckChecker.hpp  PinnedMovesChecker.hpp  sse.hpp
BoardLibrary/ResultEvaluator/: ResultEvaluator.cpp  ResultEvaluator.hpp
BoardLibrary/core/: Board.cpp  Board.hpp  BoardIO.cpp  BoardIO.hpp  NotationConversions.cpp  NotationConversions.hpp
BoardLibrary/core/bitboards/: BitBoardsUtils.h  FromToBits.hpp  PextBitBoards.cpp  bitboardslookups.hpp
BoardLibrary/detail/: BitBoardsUtils.h  Board.cpp  BoardIO.cpp  CheckChecker.cpp  CheckChecker.hpp  GetAttackedFields.h  MoveApplier.cpp  MoveValidator.cpp  NotationConversions.cpp  PextBitBoards.cpp  PinnedMovesChecker.hpp  ResultEvaluator.cpp  ResultEvaluator.hpp  bitboardslookups.cpp  bitboardslookups.hpp  see.cpp  sse.hpp
BoardLibrary/hashing/: Zobrish.cpp  zobrist.hpp
BoardLibrary/notations/: LongAlgebraicNotation.cpp  LongAlgebraicNotation.hpp  common.cpp  common.hpp  coordinationnotation.cpp  coordinationnotation.hpp  uci.cpp  uci.hpp
BoardLibrary/publicIf/: Board.hpp  BoardIO.hpp  Notation.hpp  NotationConversions.hpp  Result.hpp
BoardLibrary/utils/: BinaryOperations.hpp
Evaluators/: CMakeLists.txt  evaluatorIf.hpp
Evaluators/Common/: KingSafety.hpp  MatherialEvaluator.hpp  PawnStructureEvaluator.hpp  Positions.hpp  SquareTablesEvaluator.hpp
Evaluators/CustomizableEvaluator/: CMakeLists.txt  CustomizableEvaluatorConfig.xml  MatherialEvaluator.hpp  evaluator.cpp
Evaluators/MlEvaluator/: CMakeLists.txt  evaluator.cpp
Evaluators/StandardEvaluator/: CMakeLists.txt  evaluator.cpp
SearchLibrary/: CMakeLists.txt  Constants.hpp
SearchLibrary/CachedEngines/: FullCachedEngine.cpp  FullCachedEngine.hpp
SearchLibrary/common/: Constants.hpp
SearchLibrary/common/CachedEngines/: FullCachedEngine.cpp  FullCachedEngine.hpp
SearchLibrary/common/containers/: HashMap.hpp  PoolAllocator.hpp
SearchLibrary/common/evaluators/: MaterialAndMoveCountEvaluator.hpp  MaterialEvaluator.cpp  MaterialEvaluator.hpp  MoveCountEvaluator.cpp  MoveCountEvaluator.hpp  PawnStructureEvaluator.cpp  PawnStructureEvaluator.hpp
SearchLibrary/common/searchingAlgorithms/: FullSearchingImplementation.hpp  MVVLVA.hpp  MoveOrdering.hpp  OnlyBeatingMoves.hpp  Statisctic.hpp
SearchLibrary/searchingAlgorithms/: FullSearchingImplementation.hpp  MVVLVA.hpp  MoveOrdering.hpp  OnlyBeatingMoves.hpp
applications/: CMakeLists.txt  pythonApp.py
applications/ConsoleApplication/: CMakeLists.txt  ConsoleApplication.cpp  ConsoleApplication.hpp  IPLayer.hpp  main.cpp
applications/ConsoleApplication/ComputerPlayer/: CachedPlayer.cpp  CachedPlayer.hpp
applications/MagicBbGenerator/: main.cpp
applications/StrenghtComparator/: .main.py.swp  main.py
applications/UciApplication/: CommandParser.cpp  CommandParser.hpp  Events.hpp  EventsPropagator.cpp  EventsPropagator.hpp  GameHandler.cpp  GameHandler.hpp  IsQuietHandler.cpp  IsQuietHandler.hpp  OptionHandler.cpp  OptionHandler.hpp  main.cpp
applications/python/: CoefficientAdjuster.py  StrenghtComparator.py
applications/utils/: DebugWrapper.cpp  DebugWrapper.hpp  Timer.cpp  Timer.hpp
players/: CMakeLists.txt  ConsoleApplication.cpp  ConsoleApplication.hpp
players/ComputerPlayer/: CachedPlayer.cpp  CachedPlayer.hpp  SimpleComputerPlayer.cpp  SimpleComputerPlayer.hpp
players/HumanPlayer/: HumanPlayer.cpp  HumanPlayer.hpp  SimpleComputerPlayer.cpp  SimpleComputerPlayer.hpp
players/common/: Constants.hpp  IPLayer.hpp
test/performanceTests/: AldaBetaWithTransictionMapTest.cpp  AlfaBetaHistory.cpp  AlfaBetaMtdPvs.cpp  AlfaBetaPvs.cpp  AlfaBetaTests.cpp  AlfaBetaWithTransictionsTest.cpp  CMakeLists.txt  FullSearchTest.cpp  FullSimulation.cpp  MinMaxTests.cpp  MoveGeneratorTests.cpp  MoveGeneratorV2Tests.cpp  PreorderedMovesTests.cpp  StabilityBasedTests.cpp
test/ut/: .main.cpp.swp  AlfaBetaTests.cpp  BinOperatorsTests.cpp  BitBoardsUtilsTests.cpp  BoardTest.cpp  CMakeLists.txt  CachedMoveGeneratorTest.cpp  CastlePatternTest.cpp  CheckCheckerTest.cpp  CommandParserTest.cpp  FromToBitsTests.cpp  FullSearchTest.cpp  HashMapTest.cpp  HashTableTest.cpp  MaterialEvaluatorTest.cpp  MinMaxAndAlfaBetaTest.cpp  MinMaxTests.cpp  MoveApplierTest.cpp  MoveGeneratorTest.cpp  MoveGeneratorV2Test.cpp  MoveValidatorTest.cpp  PawnStructureEvaluatorTest.cpp  PoolAllocatorTests.cpp  PreorderedMovesTests.cpp  ResultEvaluatorTest.cpp  SearchingBasicTests.cpp  ZobrishTest.cpp  fentest.cpp  pinnedchecktest.cpp  seeTest.cpp  uciNotationTest.cpp
test/ut/mt/: FenBasedTests.cpp  (+3 more)
(+119 files in other folders)
