cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

add_library(BoardLibrary
    BoardEngine.hpp
    BoardEngine.cpp
        core/Board.cpp
        core/BoardIO.cpp
        PositionAnalyzers/CheckChecker.hpp
        PositionAnalyzers/CheckChecker.cpp
        MoveValidator/MoveValidator.hpp
        MoveValidator/MoveValidator.cpp
        core/NotationConversions.cpp
        ResultEvaluator/ResultEvaluator.hpp
        ResultEvaluator/ResultEvaluator.cpp
        MoveApplier/MoveApplier.hpp
        MoveApplier/MoveApplier.cpp
        PositionAnalyzers/PinnedMovesChecker.hpp
        core/bitboards/bitboardslookups.hpp
        PositionAnalyzers/see.cpp
        core/Notation.hpp
        ResultEvaluator/Result.hpp
        core/Board.hpp
        core/BoardIO.hpp
    MoveGeneratorV2/MoveGeneratorV2.cpp
        core/NotationConversions.hpp
    notations/common.hpp
    notations/common.cpp
    notations/coordinationnotation.hpp
    notations/coordinationnotation.cpp
    notations/LongAlgebraicNotation.hpp
    notations/LongAlgebraicNotation.cpp
    hashing/zobrist.hpp
    hashing/Zobrish.cpp
    notations/uci.hpp
    notations/uci.cpp
        core/bitboards/BitBoardsUtils.h
    notations/fen.h
    notations/fen.cpp
        core/bitboards/bitboardslookups.cpp
        core/bitboards/PextBitBoards.cpp
        core/bitboards/FromToBits.hpp)
